[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7", features = ["derive", "env"]}
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
unleash-types = "0.10.5"
unleash-yggdrasil = {version = "0.7.0", path="../../yggdrasil/unleash-yggdrasil"}
